Tune docker compose

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,4 +1,7 @@
 services:
   sms_gateway:
     build: .
+    image: sms_gateway:0.1.0
+    container_name: sms_gateway
     env_file: .env
+    restart: on-failure:5
